app/assets/stylesheets/application.scss
@import "cfa_styleguide_main";

.form-group, .text--help {
  font-size: 1.9rem;
}

html {
  background-color: $color-grey;
}

main {
  background-color: $color-grey-light;
}

@media screen and (min-width: 800px) {
  .card {
    padding: 6rem;
  }
}

.toolbar {
  align-items: center;
  padding-top: 1.5rem;

  .toolbar__left {
    margin-left: 1.5rem;
  }

  .button {
    margin: 0;
  }
}

.slab {
  margin-left: 6rem;
  margin-right: 6rem;

  @media screen and (max-width: $tablet-up) {
    margin-left: 1.5rem;
    margin-right: 1.5rem;
  }
}

.footer {
  background-color: $color-grey;
}

.homepage-section--teal {
  padding: 3.5rem;
  background-color: $color-teal-light;

  .accordion {
    background-color: $color-white;
  }
}

.illustration.left-justified {
  margin-left: 0;
}

.illustration.centered {
  margin-top: 0.1em;
}

.notice {
  padding: 0.8rem;

  .media--icon {
    margin-right: 0.8rem;
  }
}

.notice.white {
  border-color: $color-grey-light;
  border-radius: 3px;
  background-color: #FFFFFF;
  padding: 2.5rem;
}

.notice.teal {
  border: 2px solid #034E46;
  background-color: #EBFFFA;
  border-radius: 10px;
  font-size: 1.6rem;
}

.notice.grey-light {
  color: $color-grey-darkest;
  border: 2px solid $color-grey-dark;
  background-color: $color-grey-light;
  border-radius: 10px;
  padding: 1.33em 1.33em 1.33em 2.25em;

  > .list--numbered {
    padding: 0;
    margin: 0;
  }
}

.progress-bar {
  color: $color-teal;
  text-align: center;
  font-size: 1.6rem;
  margin: 0 auto;
  margin-top: 0;
  margin-bottom: 6rem;
  max-width: 400px;

  @media screen and (max-width: $tablet-up) {
    width: 100%;
  }
}

i.yes-button-checkmark {
  color: $color-green;
  font-weight: bold;
  font-size: 3rem;
  line-height: 0;
  vertical-align: middle;
}

i.no-button-cross {
  color: $color-red;
  font-weight: bold;
  font-size: 3rem;
  line-height: 0;
  vertical-align: middle;
}

.question-with-follow-up__follow-up {
  border: none;
  background: none;
  padding: 0;
  margin: 3.5rem 0;

  hr {
    margin-top: 0;
    margin-bottom: 3.5rem;
  }
}

.question-with-follow-up__follow-up:before {
  content: none;
}

.question-with-follow-up__follow-up:after {
  content: none;
}

.checkbox-group {
  .input-group {
    margin-bottom: 0;
  }
}

.input-group--block .radio-button {
  max-width: unset;
}

.button {
  margin-left: 0;
}

.text-green-innovation-lab {
  color: #00A88F;
}

.button.button--cta {
  font-size: 0.8em;
  padding: 7px 15px;
  border-radius: 5px;
  border: 2px solid var(--Black, #000);
  background: var(--White, #FFF);
  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.50);
}

.ssn-last4 {
  width: 5.5ch;
}

.text-input-group,
.text-input-group__prefix {
  padding-left: 0;
  padding-right: 0;
}

.form-width--phone {
  min-width: 9.5em;
}

.list--plain {
  list-style: none;
  padding-left: 0;
  line-height: 2;

  a {
    color: #000000;
  }
}

.privacy-policy-scrollbox {
  border: 2px solid #A9AEB1;
  border-radius: 5px;
  max-height: 300px;
  overflow-y: auto;
  padding: 2rem;

  h2, h3 {
    margin-top: 1.5rem;

    &:first-child {
      margin-top: 0;
    }
  }
}

.text-input-group .field_with_errors .form-width--phone.text-input {
  padding-left: 0;
}

